# my-fastapi-app

./: .pre-commit-config.yaml  README.md  generate_requirements.py  pyproject.toml  requirements.txt  vercel.json
.agent/workflows/: commit.md
api/: index.py
tests/: test_main.py
