[project]
name = "my-fastapi-app"
version = "0.1.0"
description = "FastAPI application for Vercel deployment"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "toml>=0.10.2",
]
requires-python = ">=3.13"

[tool.uv]
managed = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]
